--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   json_serializable: ^0.5.8
   cached_network_image: ^2.2.0+1 #图片 缓存
   webview_flutter: ^0.3.22+1
+  pull_to_refresh: ^1.5.7
 
 
 dev_dependencies:
